Adding unsplashed random api

--- a/Responsive Web Design Projects/Personal portfolio/index.html
+++ b/Responsive Web Design Projects/Personal portfolio/index.html
@@ -1,25 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" >
-
-<head>
-  <meta charset="UTF-8">
-  <title>Personal Portfolio </title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
-</head>
-
-<body>
-
-  <!DOCTYPE html5>
+<!DOCTYPE html5>
 <html lang="en">
 <head>
 	<title>My Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/personal-portfolio.css">
+<link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
 <nav>
@@ -39,22 +23,22 @@
 	<h2>Here are some of my projects</h2>
 
 	<a class="project project-tile" href="https://codepen.io/bonginkosif/pen/QYmVRx" target="blank">
-		<img class="project-img" src="https://github.com/bonginkosif/full/jJWEYY" alt="project">
+		<img class="project-img" src="https://source.unsplash.com/user/erondu/daily" alt="project">
 		<div class="project-title">Product Landing Page</div>
 	</a>
 
 	<a class="project project-tile" href="https://codepen.io/bonginkosif/pen/ZVYrya" target="blank">
-		<img class="project-img" src="https://github.com/bonginkosif/full/jJWEYY" alt="project">
+		<img class="project-img" src="https://source.unsplash.com/weekly?water" alt="project">
 		<div class="project-title">Survey-Form</div>
 	</a>
 
 	<a class="project project-tile" href="https://codepen.io/bonginkosif/pen/oVjvPp" target="blank">
-		<img class="project-img" src="https://github.com/bonginkosif/full/jJWEYY" alt="project">
+		<img class="project-img" src="https://source.unsplash.com/collection/190727/1600x900" alt="project">
 		<div class="project-title">My tribute</div>
 	</a>
 
 	<a class="project project-tile" href="https://codepen.io/bonginkosif/pen/jJWEYY" target="blank">
-		<img class="project-img" src="https://github.com/bonginkosif/full/jJWEYY" alt="project">
+		<img class="project-img" src="https://source.unsplash.com/random" alt="project">
 		<div class="project-title">JS Documentation</div>
 	</a>
 
@@ -70,11 +54,12 @@
 		</p>
 	</div>
 
-	<a class="contact-details" href="https://facebook.com/Bonginkosi" target="blank">Facebook</a>
-	<a id="profile-link" href="https://github.com/bonginkosif" target="blank" class="contact-details">Github</a>
-	<a class="contact-details" href="https://twitter.com/Bonginkosi" target="blank">Twitter</a>
-	<a class="contact-details" href="mailto: bonginkosifrankc@gmail.com" target="blank">Email</a>
-	<a class="contact-details" href="tel: 065 989 8579" target="blank">Call Me</a>
+	<a class="contact-details" href="https://facebook.com/Bonginkosi" target="blank">
+  <i class="fa fa-facebook circle"></i></a>
+	<a id="profile-link" href="https://github.com/bonginkosif" target="blank" class="contact-details"><i class="fa fa-github circle"></i></a>
+	<a class="contact-details" href="https://twitter.com/Bonginkosi" target="blank"><i class="fa fa-twitter circle"></i></a>
+	<a class="contact-details" href="mailto: bonginkosifrankc@gmail.com" target="blank"><i class="fa fa-envelope circle"></i></a>
+	<a class="contact-details" href="tel: 065 989 8579" target="blank"><i class="fa fa-google-plus circle"></i></a>
 </div>
 <footer>
 	<p>
@@ -88,10 +73,4 @@
 
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
-</html>
-  
-  
-
-</body>
-
 </html>
